--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   tflite_v2: ^1.0.0
   camera: ^0.10.5+9
   image: ^3.0.1
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
+  cloud_firestore: ^5.0.2
+  firebase_storage: ^12.1.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
